--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Z-bolg</title>
-
+    <link rel="stylesheet" href="./css/index.css">
+    <title>Zzp 's blog</title>
 </head>
 <body>
-    <h1>Zzp's bolg</h1>
+    
 </body>
 </html>
