--- a/404.html
+++ b/404.html
@@ -7,7 +7,7 @@
         <style>
             @font-face{
                 font-family: myfont;
-                src: url('./public/fonts/Hack-Bold.ttf');
+                src: url("/public/fonts/Hack-Bold.ttf");
             }
             body, h1, h2, h3, p, a {
                 color: #00ff00;
