--- a/404.html
+++ b/404.html
@@ -3,9 +3,10 @@
     <head>
         <meta charset="utf-8"/>
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <link type="text/css" rel="stylesheet" href="/public/css/404.css">
         <title>404</title>
         <style>
-            @import "/public/css/404.css";
+            
         </style>
     </head>
     <body>
