--- a/404.html
+++ b/404.html
@@ -3,62 +3,8 @@
     <head>
         <meta charset="utf-8"/>
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        
+        <link type="text/css" rel="stylesheet" href="/public/css/404.css">
         <title>404</title>
-        <style>
-            @font-face{
-    font-family: myfont;
-    src: url("/public/fonts/Hack-Bold.ttf");
-}
-body, h1, h2, h3, p, a {
-    color: #00ff00;
-}
-body,
-p {
-    font-style: normal;
-    font-family: myfont;
-    font-size: 1.25rem;
-}
-h1 {
-    font-style: normal;
-    font-family: myfont;
-    font-size: 2.75rem;
-}
-body {
-    background-color: #000;
-}
-.container {
-    width: 100%;
-    margin: auto;
-    max-width: 640px;
-}
-.bsod {
-    padding-top: 10%;
-}
-.bsod .neg {
-    text-align: center;
-    color: #000000;
-}
-.bsod .neg .bg {
-    background: #00ff00;
-    padding: 0 15px 2px 14px;
-}
-.bsod .title {
-    margin-bottom: 50px;
-}
-.bsod .nav {
-    margin-top: 35px;
-    text-align: center;
-}
-.bsod .nav .link {
-    text-decoration: none;
-    padding: 0 9px 2px 8px;
-}
-.bsod .nav .link:hover, .bsod .nav .link:focus {
-    background: #00ff00;
-    color: #000000;
-}
-        </style>
     </head>
     <body>
         <main class="bsod container">
