--- a/404.html
+++ b/404.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8"/>
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <link type="text/css" rel="stylesheet" href="/public/css/404.css">
+        <link type="text/css" rel="stylesheet" href="./public/css/404.css">
         <title>404</title>
     </head>
     <body>
