--- a/404.html
+++ b/404.html
@@ -17,7 +17,7 @@
                 * Send us an e-mail about this error and try later.
             </p>
             <nav class="nav">
-                <a href="./index.html" class="link">index</a>&nbsp;|&nbsp;<a href="#" class="link">webmaster</a>
+                <a href="./index.html" class="link">index</a>&nbsp;|&nbsp;<a href="#" class="link">about</a>
             </nav>
         </main>
     </body>
