--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 		    path.arc(40, 45, 5, 0, Math.PI*2, true);
 		    path.moveTo(65, 45);
 		    path.arc(60, 45, 5, 0, Math.PI*2, true);
-		    CTX.strokeStyle = '#000000';
+		    CTX.strokeStyle = '#00ff00';
 		    CTX.stroke(path);
 	    };
 	    
