--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 	    
 	    function test() {
 		    //CTX.clearRect(0, 0, 200, 100);
-		    CTX.fillStyle = '#ffffff';
+		    CTX.fillStyle = '#000000';
 		    CTX.fillRect(10, 10, 80, 80);
 
 		    let path = new Path2D();
