--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
     <title>Zzp 's blog</title>
 </head>
 <body>
-    <canvas></canvas>
+    <h1 style="color:#00ff00">This's test!</h1>
+    <canvas>
+    </canvas>
     <script>
 	    const CANVAS = document.getElementsByTagName("canvas")[0];
 	    const CTX = CANVAS.getContext("2d");
