--- a/readme.html
+++ b/readme.html
@@ -378,15 +378,18 @@ blockquote {
 <body>
 <h1 id="%E5%BC%A0%E5%BF%97%E9%B9%8F"><strong>张志鹏</strong></h1>
 <h2 id="%E5%9F%BA%E6%9C%AC%E8%B5%84%E6%96%99"><strong>基本资料</strong></h2>
-<p><strong>出生日期:</strong> 1995.01.24</p>
-<p><strong>暂住于:</strong> 北京市昌平区平西府地铁站附近</p>
-<p><strong>电话:</strong> 177 1042 9106</p>
+<p><strong>出生日期 :</strong> 1995.01.24</p>
+<p><strong>暂住于 :</strong> 北京市昌平区平西府地铁站附近</p>
+<p><strong>电话 :</strong> 177 1042 9106</p>
 <p><strong>QQ :</strong> 468462891</p>
-<p><strong>Wechat:</strong> joker_zzp</p>
-<p><strong>Email:</strong> joker_zhangzhp@foxmail.com</p>
+<p><strong>Wechat :</strong> joker_zzp</p>
+<p><strong>Email :</strong> joker_zhangzhp@foxmail.com</p>
+<h2 id="%E8%87%AA%E6%88%91%E8%AF%84%E4%BB%B7"><strong>自我评价</strong></h2>
+<p>有两年软件测试经验 在这两年学习到了很多东西并喜欢这种不断学习进步成长的状态 我学习接受新鲜事物的能力还可以 对人真诚友善 对工作认真负责 在工作中也一直保持这严谨仔细的工作态度</p>
+<p>爱好特长: 喜欢滑板 羽毛球 台球 玩游戏 软件开发 安全测试</p>
 <h2 id="%E6%B1%82%E8%81%8C%E6%84%8F%E5%90%91"><strong>求职意向</strong></h2>
-<p><strong>职位:</strong> 软件测试工程师
-<strong>薪资:</strong> 7K ~ 8K</p>
+<p><strong>职位 :</strong> 软件测试工程师
+<strong>薪资 :</strong> 7K ~ 8K</p>
 <h2 id="%E6%8E%8C%E6%8F%A1%E6%8A%80%E8%83%BD"><strong>掌握技能</strong></h2>
 <ul>
 <li>熟练掌握 Windows系统/Linux系统 开发测试环境搭建 各种office工具使用</li>
@@ -409,12 +412,6 @@ blockquote {
 <p><strong>北京语言大学</strong>
 <em>2018.09 ~ 至今</em></p>
 <p>专业: 计算机科学与技术 （本科）</p>
-<p><strong>北京国家开放大学</strong>
-<em>2014.10 ~ 2017.07</em></p>
-<p>专业: 行政管理 （大专）</p>
-<p><strong>首钢职业技术学院</strong>
-<em>2010.09 ~ 2013.07</em></p>
-<p>专业: 机电一体化 （中技）</p>
 <h2 id="%E5%B7%A5%E4%BD%9C%E7%BB%8F%E5%8E%86"><strong>工作经历</strong></h2>
 <p><strong>万众金福科技有限公司</strong>
 <em>2018.09 ~ 至今</em></p>
@@ -422,9 +419,6 @@ blockquote {
 <p><strong>北京安托软件技术有限公司</strong>
 <em>2017.02 ~ 2018.04</em></p>
 <p>职位: 软件测试开发工程师</p>
-<p><strong>首钢建设集团有限公司</strong>
-<em>2013.10 ~ 2016.11</em></p>
-<p>职位: 高压电气调试技术员</p>
 <h2 id="%E9%A1%B9%E7%9B%AE%E7%BB%8F%E9%AA%8C"><strong>项目经验</strong></h2>
 <p><strong>AI交易所</strong>
 <strong>（万众金福科技有限公司）</strong>
@@ -535,12 +529,6 @@ blockquote {
 <li>使用 LoadRunner 进行压力测试搭建测试场景 检查单元模块压力性能是否达标</li>
 <li>完善审计模块功能说明文档</li>
 </ol>
-<h2 id="%E8%87%AA%E6%88%91%E8%AF%84%E4%BB%B7"><strong>自我评价</strong></h2>
-<p>有两年软件测试经验 在这两年学习到了很多东西并喜欢这种不断学习进步成长的状态 我学习接受新鲜事物的能
-力还可以 对人真诚友善 对工作认真负责 在工作中也一直保持这严谨仔细的工作态度</p>
-<p>优点: 对人真诚 容易与人相处善解人意 个人能力强 热心肠爱帮助人 对工作认真负责 敢于承担责任 不计
-较得失 适应环境能力强 喜欢学习自律能力强等</p>
-<p>爱好特长: 喜欢滑板 羽毛球 台球 玩游戏 软件开发 安全测试</p>
 
 </body>
 </html>
