--- a/404.html
+++ b/404.html
@@ -18,7 +18,7 @@
                 * Send us an e-mail about this error and try later.
             </p>
             <nav class="nav">
-                <a href="./index" class="link">index</a>&nbsp;|&nbsp;<a href="./readme" class="link">about</a>
+                <a href="./index.html" class="link">index</a>&nbsp;|&nbsp;<a href="./readme.html" class="link">about</a>
             </nav>
         </main>
     </body>
