--- a/index.html
+++ b/index.html
@@ -4,22 +4,25 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="./public/css/index.css">
+	<link rel="stylesheet" href="./public/css/index.css">
+	<link rel="stylesheet" href="./public/js/jquery-3.3.1.min.js">
     <title>Zzp 's blog</title>
 </head>
 <body>
 	<h1 style="color:#00ff00">This's test!</h1>
-	<div style="width:400px; height:300px; color: #fff;">
-		<iframe name="document" src="./README.md" frameborder="0"></iframe>
+	<div style="width:400px; height:300px;">
+		<iframe name="document" src="./README.md" style="border-style: solid;"></iframe>
 	</div>
     <canvas>
     </canvas>
     <script>
 
-		let iframed = document.getElementsByTagName("iframe")[0];
+		let iframed = document.getElementsByName("document")[0];
 		let t = iframed.contentWindow.document;
 		t.documentElement.style.color = "#fff";
-		console.log(t.documentElement.innerText);
+		
+		let doc_md = t.documentElement.innerText;
+		console.log(doc_md);
 		
 
 	    // const CANVAS = document.getElementsByTagName("canvas")[0];
@@ -74,6 +77,7 @@
 		// 	onResize();
 		// 	test();
 		// };
-    </script>
+	</script>
+
 </body>
 </html>
