--- a/readme.html
+++ b/readme.html
@@ -1758,7 +1758,7 @@ pre[class*="language-"] {
   <h1 id="zzp-bolg" class="atx">zzp-bolg</h1>
 <p>joker-zzp的博客</p>
 <p>一个测试人员的学习资料！</p>
-<p><a href="joker-zzp.github.io/doc/readme/zzp.html">简历地址</a></p>
+<p><a href="./doc/readme/zzp.html">简历地址</a></p>
 
   </article>
 </body>
