图片还是大手机加载不出来

--- a/readme.html
+++ b/readme.html
@@ -36,7 +36,7 @@
 <body>
   <article class="markdown-body">
     <h3 id="joker-zzp-" class="atx">joker-zzp的博客</h3>
-    <p><img src="./image/my/me.jpg" alt="me" width="150" height="150"></p>
+    <p><img src="./image/my/me.jpg" alt="me"></p>
     <p>欢迎来到我的博客</p>
     <hr>
     <p>一个测试人员的学习资料！</p>
